--- a/04_livrable/rapport_technique_backup_230411.tex
+++ b/04_livrable/rapport_technique_backup_230411.tex
@@ -298,7 +298,7 @@ Ces deux index prennent la forme de deux pages du site que le lecteur trouve dan
 % pour partie scientifique
 % pour partie scientifique
 % pour partie scientifique
-Les choix d'encodages des <term/> méritent commentaire. En effet, si l'intuition d'origine avait pour origine les mises en valeurs typographiques de certains termes, mis entre guillemets sans être des citations ou mis en italique, il semblait évident que tous les termes entre guillemets ne méritaient pas d'être intégrés en tant que «~notions adverses~» et tous les termes en italiques en «~expressions privilégiées~»~; certains étaient des citations d'autre un simple procédé d'emphase. Or, à bien y regarder les termes encodés en expressions privilégiées n'étaient pas tous des effets d'emphase~? Ne voit-on pas plutôt Robbe-Grillet insister sur telle ou telle formulation par opposition à une autre explicitement mentionée ou non~? C'est en tout cas ce qui nous est apparu après un examen minutieux. En effet, les expressions privilégiées loin de revêtir l'évidence de concept nettement défini sont davantage des adjectifs qui changent le sens des termes qui les entourent et font signe vers les concepts d'une philosophie, du moins d'une esthétique qui se définit surtout par son opposition à la métaphysique éculée contre laquelle Robbe-Grillet engage son texte. Ainsi les articles indéfinis «~\textit{des} questions, et \textit{des} réponses~» page~64, l'adjectif «~vrai~» pages~24 et~162 (3~fois) et les multiples occurences du verbes «~être~» souvent accompagné de l'adverbe «~là~» (pages~20, 21, 177), expressions privilégiées contenant une assertion possitive sont-ils parmi les termes les plus courants de la langue française et, seul, difficilement rattachable à telle ou telle théorie ésthétique, si ce n'est à une insistance sur l'immanence opposée à la métaphysique prêté aux adversaire de \robbe{}. Sans doute la relative banalité des termes mis en avant par la typographie sert à la démonstration~: l'acceptation de l'immanence des choses difficilement contestable se trouve aussi dans ce choix typographique qui sert à démontrer avec force que l'évidence, c'est-à-dire le bon sens est du côté de Robbe-Grillet.
+Les choix d'encodages des <term/> méritent commentaire. En effet, si l'intuition d'origine avait pour fondement les mises en valeurs typographiques de certains termes, mis entre guillemets sans être des citations ou mis en italique, il semblait évident que tous les termes entre guillemets ne méritaient pas d'être intégrés en tant que «~notions adverses~» et tous les termes en italiques en «~expressions privilégiées~»~; certains étaient des citations d'autre un simple procédé d'emphase. Or, à bien y regarder les termes encodés en expressions privilégiées n'étaient pas tous des effets d'emphase~? Ne voit-on pas plutôt Robbe-Grillet insister sur telle ou telle formulation par opposition à une autre explicitement mentionée ou non~? C'est en tout cas ce qui nous est apparu après un examen minutieux. En effet, les expressions privilégiées loin de revêtir l'évidence de concept nettement défini sont davantage des adjectifs qui changent le sens des termes qui les entourent et font signe vers les concepts d'une philosophie, du moins d'une esthétique qui se définit surtout par son opposition à la métaphysique éculée contre laquelle Robbe-Grillet engage son texte. Ainsi les articles indéfinis «~\textit{des} questions, et \textit{des} réponses~» page~64, l'adjectif «~vrai~» pages~24 et~162 (3~fois) et les multiples occurences du verbes «~être~» souvent accompagné de l'adverbe «~là~» (pages~20, 21, 177), expressions privilégiées contenant une assertion possitive sont-ils parmi les termes les plus courants de la langue française et, seul, difficilement rattachable à telle ou telle théorie ésthétique, si ce n'est à une insistance sur l'immanence opposée à la métaphysique prêté aux adversaire de \robbe{}. Sans doute la relative banalité des termes mis en avant par la typographie sert à la démonstration~: l'acceptation de l'immanence des choses difficilement contestable se trouve aussi dans ce choix typographique qui sert à démontrer avec force que l'évidence, c'est-à-dire le bon sens est du côté de Robbe-Grillet.
 
 
 
