--- a/04_livrable/memoire.tex
+++ b/04_livrable/memoire.tex
@@ -1231,7 +1231,9 @@ Le récit et surtout ces moyens~: la narration, le personnage, en réalité tous
 \vspace*{4cm}
 \addcontentsline{toc}{section}{Conclusion}
 
-%RÉSUME de ce qu'on a dit précédemment
+Collection d'articles épars écrits pour répondre à des circonstances, voire une injonction à défendre et conquérir une position dans le champs littéraire, \punr{} est un objet difficile à saisir. Proposer une lecture des thèses et des moyens à la fois théoriques et surtout rhétoriques employé par Robbe-Grillet n'est pas chose aisée, car il faut à la fois maintenir une distance critique (les articles sont écrit en réaction, en situation, et en cela des moments de leur auteur) et entretenir une proximité capable de dénicher les articulations d'une pensée qui progresse par à coup, par coup porté à des adversaires réels ou supposé. C'est pourtant ce que nous nous sommes efforcé de faire, pénétrant pleinement dans le détail du texte et l'ouvrant également sur son époque et au delà sur les possibles dont il est issu et ceux qu'il a engendré.
+
+Au moyen d'une écriture qui s'expose comme une recherche, une aventure, Robbe-Grillet consacre un changement d'époque à l'émergence de laquelle le Nouveau~Roman est appelé à participer~: destituant les vieux mythes et dépoussiérant les vieux modèles de penser de récit. Une nouvelle manière de voir et de vivre est possible car une nouvelle manière d'écrire est bel et bien sous nos yeux. Et s'il s'agit d'une écriture exigeante, c'est que le lecteur est invité à y prendre toute sa place pour ne pas lire ce que lui imposent des schémas rétrogrades mais bien le texte devenu phénomène plus opaque mais surtout plus subversif.
 
 Lire \punr, c'est plonger dans une époque mais aussi et surtout percevoir l'enthousiasme du moins l'énergie d'un commencement, son (relatifs) fracas et ses errances %XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 . Le lire aujourd'hui, c'est peut-être aussi mesurer l'écart qui nous éloigne de cet ouvrage qui fit date et être tenté de reprendre, corriger, débattre les propos d'\robbe{} qui prit le risque de devenir daté. C'est tous le geste d'une époque que l'on entrevoit dans ce livre~: examiner le soupçon qui nous saisit sur nos certitudes ou celles que l'on cherche à nous imposer.
